syntax = "proto3";

package team;

option go_package = "github.com/elfaldiajr/KTQApplication/backend/team-service/pkg/pb";

service TeamService {
  rpc CreateTeam(CreateTeamRequest) returns (TeamResponse);
  rpc GetTeam(GetTeamRequest) returns (TeamResponse);
  rpc UpdateTeam(UpdateTeamRequest) returns (TeamResponse);
  rpc DeleteTeam(DeleteTeamRequest) returns (DeleteTeamResponse);
  rpc GetAllTeams(GetAllTeamsRequest) returns (ListTeamsResponse);
  rpc GetTeamsByOwner(GetTeamsByOwnerRequest) returns (ListTeamsResponse);
}

message Team {
  string team_id = 1;
  string owner_id = 2;
  string game_id = 3;
  string name = 4;
  string logo_url = 5;
  string created_at = 6;
  string updated_at = 7;
}

message CreateTeamRequest {
  string owner_id = 1;
  string game_id = 2;
  string name = 3;
  string logo_url = 4;
}

message GetTeamRequest {
  string team_id = 1;
}

message UpdateTeamRequest {
  string team_id = 1;
  string name = 2;
  string logo_url = 3;
}

message DeleteTeamRequest {
  string team_id = 1;
}

message GetAllTeamsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message GetTeamsByOwnerRequest {
  string owner_id = 1;
}

message TeamResponse {
  Team team = 1;
  string message = 2;
}

message ListTeamsResponse {
  repeated Team teams = 1;
  int32 total = 2;
}

message DeleteTeamResponse {
  bool success = 1;
  string message = 2;
}